--- a/aboutme.html
+++ b/aboutme.html
@@ -5,21 +5,32 @@
 	<title>Sundeep's Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-	</head>
+	<link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Poppins:700,600,500,400' rel='stylesheet' type='text/css'>
+</head>
 <body>
-	<section>
+<section>
 	<nav>
-	<ul>
-	<li style="float: left"><a href="index.html">Sundeep Samra</a></li>
-	<li><a href="__">Contact</a></li>
-	<li><a href="__">Projects</a></li>
-	<li><a href="__">About Me</a></li>
-	</ul>
-	</nav>	
-	</section>
-	<section>
-	</section>
+		<ul>
+			<li style="float: left"><a>Sundeep Samra</a>
+			<li style="float:left"><a href="index.html">Home</a></li>
+		</ul>
+	</nav>
+	<div class="aboutme">
+	<h1>Hello !</h1>
+		<img class="avatar" src="./images/avatar.jpg" alt="Me">
+  <p>I just graduated from <strong>Baruch College</strong> with a BBA in Digital Marketing. I am currently taking time off and pursuing my interest in coding! :) </p>
+  <p>My family is most important to me, they are my prime supporters and I would not be where I am today if it wasn’t for them.
+  <p> If you would like to contact me please take a look below for social media contact. I look forward to hearing your feed back and connecting with you</p>
+  </p>
+  </div>
+  </section>	
 	<footer class="content-footer">
-</footer>	
-</body>
-</html>
+			<p>Follow me on :D</p>
+		<p><a href="https://www.linkedin.com/in/sks127"> Linkedin </a>
+<a href="https://www.twitter.com/ssamweb"> Twitter </a>
+<a href="https://www.github.com/samcode93"> Github </a></p>
+
+		</footer>	
+	</body>
+	</html>
