--- a/index.html
+++ b/index.html
@@ -5,26 +5,39 @@
 	<title>Sundeep's Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Poppins:700,600,500,400' rel='stylesheet' type='text/css'>
+	<p class="masthead-heading">Hi, I'm Sundeep !</p>
+	<p class="masthead-intro"> Web developer in training, digital marketer, check out my projects below ;) </p>
 </head>
 <body>
-	<header class="main-header" role="banner"> <img class="image" src="Images/header.jpg" alt="Banner"/></header>
 	<nav>
 		<ul>
-			<li style="float: left"><a href="index.html">Sundeep Samra</a></li>
-			<li><a href="__">Contact</a></li>
-			<li><a href="__">Projects</a></li>
-			<li><a href="aboutme.html">About Me</a></li>
+			<li style="float: left"><a>Sundeep Samra</a>
+			<li style="float:left"><a href="aboutme.html">About Me</a></li>
 		</ul>
 	</nav>
 	<section>
+		<div class="projects">
+	<p> <bold>PROJECTS</bold> </p> 
+<center><p><a href="http://codepen.io/sksFE/full/VjwxVV/"><img class="projectimages" src="./images/aboutme.png" alt="ABOUTMECODEPEN"><a href="google.com" href=""></center></p>
+
+
+<p><center><img class="projectimages" src="./images/NYTIMESHACK.png" alt="NYtimeshack"></center></p>
+
+
+<p><center><a href="https://github.com/Samcode93/startup-landing-page-clone"><img class="projectimages" src="./images/karma landing page.png"></center></p>
+
+
+	</div>
 	</section>
-	<section>
-		<div class="middle">
-			<img class="image2" src="images/avatar.jpg"> Sundeep is a web developer in training ! She also has a background in Web Analytics and Marketing.</div>
-		</section>
+
 		<footer class="content-footer">
-			<p> Feel free to contact me! </p> 
-			<p> Header Image Via <a href="https://unsplash.com/photos/CuEvrPd3NYc">Unsplash</a></p>   
+			<p>Follow me on :D</p>
+		<p><a href="https://www.linkedin.com/in/sks127"> Linkedin </a>
+<a href="https://www.twitter.com/ssamweb"> Twitter </a>
+<a href="https://www.github.com/samcode93"> Github </a></p>
+
 		</footer>	
 	</body>
 	</html>
