--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
 	</nav>
 	<div class="aboutme">
 	<h1>Hello !</h1>
-		<img class="avatar" src="/images/Avatar.jpg" alt="Me">
+		<img class="avatar" src="/Images/Avatar.jpg" alt="Me">
   <p>I just graduated from <strong>Baruch College</strong> with a BBA in Digital Marketing. I am currently taking time off and pursuing my interest in coding! :) </p>
   <p>My family is most important to me, they are my prime supporters and I would not be where I am today if it wasn’t for them.
   <p> If you would like to contact me please take a look below for social media contact. I look forward to hearing your feed back and connecting with you</p>
