--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 	<section>
 		<div class="projects">
 	<p> <bold>PROJECTS</bold> </p> 
-<center><p><a href="http://codepen.io/sksFE/full/VjwxVV/"><img class="projectimages" src="./images/aboutme.png" alt="ABOUTMECODEPEN"><a href="google.com" href=""></center></p>
+<center><p><a href="http://codepen.io/sksFE/full/VjwxVV/"><img class="projectimages" src="./Images/Aboutme.png" alt="ABOUTMECODEPEN"><a href="google.com" href=""></center></p>
 
 
-<p><center><img class="projectimages" src="./images/NYTIMESHACK.png" alt="NYtimeshack"></center></p>
+<p><center><img class="projectimages" src="./Images/NYTIMESHACK.png" alt="NYtimeshack"></center></p>
 
 
-<p><center><a href="https://github.com/Samcode93/startup-landing-page-clone"><img class="projectimages" src="./images/karma landing page.png"></center></p>
+<p><center><a href="https://github.com/Samcode93/startup-landing-page-clone"><img class="projectimages" src="./Images/karma landing page.png"></center></p>
 
 
 	</div>
