--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <p><center><img class="projectimages" src="./Images/NYTIMESHACK.png" alt="NYtimeshack"></center></p>
 
 
-<p><center><a href="https://github.com/Samcode93/startup-landing-page-clone"><img class="projectimages" src="./Images/karma landing page.png"></center></p>
+<p><center><a href="https://github.com/Samcode93/startup-landing-page-clone"><img class="projectimages" src="./Images/Karma Landing Page.png"></center></p>
 
 
 	</div>
